--- a/crossplane/apis/definition.yaml
+++ b/crossplane/apis/definition.yaml
@@ -32,7 +32,7 @@ spec:
                 default: harden
             required:
               - inventory
-              - role
+              # - role
           # status:
           #   type: object
           #   properties: {}
