--- a/crossplane/crossplane.yaml
+++ b/crossplane/crossplane.yaml
@@ -14,7 +14,7 @@ spec:
   crossplane:
     version: ">=v1.14.4-0"
   dependsOn:
-    - provider: xpkg.upbound.io/crossplane-contrib/provider-ansible
-      version: ">=v0.5.0"
-    # - function: xpkg.upbound.io/crossplane-contrib/function-patch-and-transform
-    #   version: ">=v0.2.1"
+    - provider: xpkg.upbound.io/jcw/provider-ansible
+      version: ">=v0.5.0-jcw2-ansible-8.7.0"
+    - function: xpkg.upbound.io/crossplane-contrib/function-patch-and-transform
+      version: ">=v0.2.1"
