--- a/tutorial/4-gitlab-private.yaml
+++ b/tutorial/4-gitlab-private.yaml
@@ -2,7 +2,7 @@
 apiVersion: ansible.crossplane.io/v1alpha1
 kind: ProviderConfig
 metadata:
-  name: ssh-key
+  name: ssh-key-gitlab
 spec:
   credentials:
     - filename: ssh.key
@@ -25,7 +25,7 @@ metadata:
 spec:
   forProvider:
     inventoryInline: |
-      vm-1.default
+      vm-1.vm
     roles:
       - name: ansible_provider.harden_role
         src: git+https://gitlab.com/janwillies/ansible-automation-private.git
@@ -34,4 +34,4 @@ spec:
       ansible_ssh_private_key_file: ./ssh.key
       ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
   providerConfigRef:
-    name: ssh-key
+    name: ssh-key-gitlab
